# simple3d

./: Cargo.toml  run-web.sh
demo/: Cargo.toml
demo/src/: lib.rs  main.rs  omt.rs  rtree.rs
engine/: Cargo.toml
engine/src/: app.rs  camera.rs  context.rs  geometry.rs  mesh.rs  shader.rs  shader.wgsl
engine/src/backend/: winit.rs
engine/src/canvas/: drawing.rs  group.rs  mod.rs
graphics/: Cargo.toml
graphics/examples/: spinning_box.rs
graphics/src/: app.rs  context.rs  geometry.rs  lib.rs  mesh.rs  pd_shader.wgsl  pn_shader.wgsl  shader.rs  shader.wgsl
graphics/src/backend/: winit.rs
graphics/src/canvas/: drawing.rs  group.rs  mod.rs
graphics/src/math/: mod.rs  transform.rs
math/: Cargo.toml
math/src/: auto_grad.rs  lib.rs
rtrees/: Cargo.toml
rtrees/src/: lib.rs  main.rs  omt.rs  rtree.rs
web/: index.html
