[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18.0", features = [ "derive" ] }
log = "0.4.22"
nalgebra = "0.33.0"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = "0.30.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
wgpu = { version = "22.1.0", features = [ "webgl" ] }

